# smoothpaper

./: .clang-format  .editorconfig  .gitignore  .prettierrc  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  Dockerfile  LICENSE.md  README.md  embed.go  go.mod  go.sum  smoothpaper.toml  vcpkg.json  version.go
.github/workflows/: cmake-build.yml  release-please.yml
cmd/smoothpaper/: main.go
cmd/test/: test.cpp  test.go
internal/changer/: changer.go
internal/cli/: config.go  flags.go  root.go
internal/cli/cmd/: genman.go  load.go  next.go  start.go  status.go  stop.go
internal/cli/cmd/utils/: utils.go
internal/command/: command.go
internal/glrender/: glrender.go
internal/glxrender/: glxrender.go  glxrender.h
internal/glxrenderer/: glxrenderer.go  glxrenderer.h
internal/ipc/: client.go  handlers.go  manager.go  routes.go  server.go  types.go
internal/render/: render.go
internal/types/: types.go
internal/wallpaper/: command.go  manager.go
internal/wlrenderer/: wlr-layer-shell-unstable-v1.c  wlr-layer-shell-unstable-v1.h  wlrenderer.go  wlrenderer.h
internal/xrender/: scaling.go  wallpaper.go  xgl.go  xlib.go  xlib.h
manpages/: smoothpaper-completion-bash.1  smoothpaper-completion-fish.1  smoothpaper-completion-powershell.1  smoothpaper-completion-zsh.1  smoothpaper-completion.1  smoothpaper-genman.1  smoothpaper-load.1  smoothpaper-next.1  smoothpaper-status.1  smoothpaper-stop.1  smoothpaper.1
src/: Config.cpp  Config.hpp  Scaling.cpp  Scaling.hpp  Version.hpp.in  Window.cpp  Window.hpp  main.cpp
